// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Component should apply value from style prop 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "backgroundColor": "transparent",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <Image
    onLoad={[Function]}
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "bottom": 0,
        "height": undefined,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "tintColor": "red",
        "top": 0,
        "width": undefined,
      }
    }
    testID="RNE__Image"
    transition={true}
  />
  <AnimatedComponent
    accessibilityElementsHidden={true}
    importantForAccessibility="no-hide-descendants"
    pointerEvents="none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "opacity": 1,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#bdbdbd",
          "justifyContent": "center",
          "tintColor": "red",
        }
      }
      testID="RNE__Image__placeholder"
    />
  </AnimatedComponent>
  <View
    style={
      Object {
        "tintColor": "red",
      }
    }
  />
</View>
`;

exports[`Image Component should apply values from theme 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "backgroundColor": "transparent",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <Image
    onLoad={[Function]}
    replaceTheme={[Function]}
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "bottom": 0,
        "height": undefined,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": undefined,
      }
    }
    testID="RNE__Image"
    theme={
      Object {
        "Image": Object {
          "placeholderStyle": Object {
            "backgroundColor": "red",
          },
        },
        "colors": Object {
          "disabled": "hsl(208, 8%, 90%)",
          "divider": "#bcbbc1",
          "error": "#ff190c",
          "grey0": "#393e42",
          "grey1": "#43484d",
          "grey2": "#5e6977",
          "grey3": "#86939e",
          "grey4": "#bdc6cf",
          "grey5": "#e1e8ee",
          "greyOutline": "#bbb",
          "platform": Object {
            "android": Object {
              "error": "#f44336",
              "primary": "#2196f3",
              "secondary": "#9C27B0",
              "success": "#4caf50",
              "warning": "#ffeb3b",
            },
            "ios": Object {
              "error": "#ff3b30",
              "primary": "#007aff",
              "secondary": "#5856d6",
              "success": "#4cd964",
              "warning": "#ffcc00",
            },
          },
          "primary": "#2089dc",
          "searchBg": "#303337",
          "secondary": "#8F0CE8",
          "success": "#52c41a",
          "warning": "#faad14",
        },
      }
    }
    transition={true}
    updateTheme={[Function]}
  />
  <View
    accessibilityElementsHidden={true}
    importantForAccessibility="no-hide-descendants"
    pointerEvents="none"
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "opacity": 1,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "red",
          "justifyContent": "center",
        }
      }
      testID="RNE__Image__placeholder"
    />
  </View>
  <View
    style={Object {}}
  />
</View>
`;

exports[`Image Component should render on android 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "backgroundColor": "transparent",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <Image
    onLoad={[Function]}
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "bottom": 0,
        "height": undefined,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": undefined,
      }
    }
    testID="RNE__Image"
    transition={true}
  />
  <AnimatedComponent
    accessibilityElementsHidden={true}
    importantForAccessibility="no-hide-descendants"
    pointerEvents="none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "opacity": 1,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#bdbdbd",
          "justifyContent": "center",
        }
      }
      testID="RNE__Image__placeholder"
    />
  </AnimatedComponent>
  <View
    style={Object {}}
  />
</View>
`;

exports[`Image Component should render on ios 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "backgroundColor": "transparent",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <Image
    onLoad={[Function]}
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "bottom": 0,
        "height": undefined,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": undefined,
      }
    }
    testID="RNE__Image"
    transition={true}
  />
  <AnimatedComponent
    accessibilityElementsHidden={true}
    importantForAccessibility="no-hide-descendants"
    pointerEvents="none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "opacity": 1,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#bdbdbd",
          "justifyContent": "center",
        }
      }
      testID="RNE__Image__placeholder"
    />
  </AnimatedComponent>
  <View
    style={Object {}}
  />
</View>
`;

exports[`Image Component should render without the transition 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "backgroundColor": "transparent",
      "overflow": "hidden",
      "position": "relative",
    }
  }
>
  <Image
    onLoad={[Function]}
    source={
      Object {
        "uri": "https://i.imgur.com/0y8Ftya.jpg",
      }
    }
    style={
      Object {
        "bottom": 0,
        "height": undefined,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
        "width": undefined,
      }
    }
    testID="RNE__Image"
    transition={false}
  />
  <AnimatedComponent
    accessibilityElementsHidden={true}
    importantForAccessibility="no-hide-descendants"
    pointerEvents="none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "opacity": 0,
        },
      ]
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#bdbdbd",
          "justifyContent": "center",
        }
      }
      testID="RNE__Image__placeholder"
    />
  </AnimatedComponent>
  <View
    style={Object {}}
  />
</View>
`;
